exports[`Resolver tests resolve query one 1`] = `
Object {
  "createdAt": "2016-11-18T11:25:11.000Z",
  "firstActive": "2016-11-18T11:25:11.000Z",
  "id": 1,
  "isActive": false,
  "name": "na1",
  "num": 15,
  "updatedAt": "2016-11-18T11:25:11.000Z",
}
`;

exports[`Resolver tests resolve query one with subscribe 1`] = `
Object {
  "createdAt": "2016-11-18T11:25:11.000Z",
  "firstActive": "2016-11-18T11:25:11.000Z",
  "id": 2,
  "isActive": false,
  "name": "na2",
  "num": 15,
  "updatedAt": "2016-11-18T11:25:11.000Z",
}
`;

exports[`Resolver tests resolve query one with subscribe 2`] = `
Array [
  Array [
    "subscription-123",
    Object {
      "createdAt": "2016-11-18T11:25:11.000Z",
      "firstActive": "2016-11-18T11:25:11.000Z",
      "id": 2,
      "isActive": false,
      "name": "na2",
      "num": 15,
      "title": "newTitle",
      "updatedAt": "2016-11-18T11:25:11.000Z",
    },
  ],
]
`;
